--- a/SOPT_CloneCoding/build.gradle
+++ b/SOPT_CloneCoding/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation("software.amazon.awssdk:bom:2.21.0")
+    implementation("software.amazon.awssdk:s3:2.21.0")
 }
 
 tasks.named('test') {
